# nanodistro

./: .gitignore  .gitmodules  meson.build
configs/: simulator.yaml
include/: builtin.h  cgroup.h  cleanup.h  configs.h  error.h  event-loop.h  fs-utils.h  gui.h  json-utils.h  libmounts.h  log.h  loop.h  lv_conf.h  lv_custom.h  main.h  mdi_sym.h  modules.h  net-utils.h  netif.h  path-utils.h  process.h  readable.h  request.h  status.h  std-utils.h  str-utils.h  termview.h  time-utils.h  uevent.h  url.h  wlan.h  worker.h
libs/: meson.build
po/: meson.build  nanodistro.pot  zh_CN.po
src/: builtin.S  config.h.in  main.cpp  meson.build
src/display/: backends.cpp  console.cpp  display.cpp  drm.cpp  drm_legacy.cpp  fbdev.cpp  internal.h  meson.build  sdl2.cpp
src/flasher/: cleanup.cpp  install.cpp  internal.h  lock.cpp  main.cpp  meson.build  netblk.cpp
src/fonts/: backends.cpp  fonts.cpp  internal.h  meson.build
src/fonts/freetype2/: freetype2.cpp  meson.build
src/helper/: cmd_progress.cpp  cmd_status.cpp  cmd_write.cpp  copy.cpp  internal.h  main.cpp  meson.build
src/image/: backends.cpp  image.cpp  internal.h  meson.build  nanosvg.cpp
src/input/: backends.cpp  input.cpp  internal.h  meson.build
src/input/evdev/: context.cpp  device.cpp  event.cpp  indev.cpp  internal.h  meson.build
src/input/sdl2/: meson.build  sdl2-keyboard.cpp  sdl2-mouse.cpp  sdl2-mousewheel.cpp
src/lib/: cgroup.cpp  command.cpp  configs.cpp  error.cpp  escape.cpp  event-loop.cpp  filesystem.cpp  json.cpp  libmount.cpp  logging.cpp  loop.cpp  meson.build  modules.cpp  paths.cpp  process.cpp  readable.cpp  request.cpp  status.cpp  strings.cpp  syslog.cpp  time.cpp  uevent.cpp  worker.cpp
src/lib/url/: encode.cpp  generate.cpp  inline.cpp  net.cpp  parse.cpp  url.cpp
src/netblk/: cache.cpp  cache_backend.cpp  cache_lock.cpp  curl.cpp  fuse3.cpp  internal.h  main.cpp  mem.cpp  meson.build  nbd.cpp  netblk.cpp  netblks.cpp  psi.cpp  ublk.cpp
src/network/: intf.cpp  ipv4.cpp  ipv4_cidr.cpp  ipv4_mask.cpp  ipv4_route.cpp  ipv6.cpp  ipv6_cidr.cpp  ipv6_route.cpp  mac.cpp  meson.build  net.cpp  netlink.cpp  resolvconf.cpp
src/network/wlan/: base.cpp  client.cpp  internal.h  network.cpp  poll.cpp  socket.cpp  start.cpp
src/ui/: confirm.cpp  context.h  hello.cpp  init.cpp  inputbox.cpp  lib.cpp  main.cpp  meson.build  msgbox.cpp  pages.cpp  termview.cpp  ui.h
src/ui/choose_disk/: choose.cpp  hotplug.cpp  info.cpp  internal.h  load.cpp  meson.build
src/ui/choose_image/: choose.cpp  group.cpp  image.cpp  internal.h  load.cpp  meson.build
src/ui/mass_storage/: draw.cpp  internal.h  load.cpp  meson.build  running.cpp  start.cpp  stop.cpp
src/ui/network/: ethernet.cpp  hello.cpp  ip_config.cpp  meson.build  network.cpp  network.h  proxy.cpp  wlan.cpp  wlan_connect.cpp
src/ui/progress/: buttons.cpp  draw.cpp  installer.cpp  internal.h  meson.build  status.cpp  terminal.cpp  thread.cpp
